* CIF exporter and possibility to parse CIF files from string representations
* new reflectivity code based on transfer matrices (contributed by Numan
  Laanait, nlaanait@gmail.com)
* unittest and code quality updates
* show_reciprocal_space_plane function to plot a cut in reciprocal space
  together with the peak positionn of a given material
* new FourC experiment class, equivalent to HXRD, but using a four circle
  goniometer for consistent Q2Ang and Ang2Q functions
* add spline coefficients to PowderModel fits
* allow single Layer object as argument in LayerModel
* rewrite of line cut functions, shorter code, faster execution, more
  versatile
* avoid loops in Experiment.Q2Ang functions
* clean README and add new CONTRIBUTIONS instructions

v1.5.0, 2018-07-04

* improved docstring formating
* simulation code for diffuse X-ray reflectivity
* more flexibility in defining materials Wyckoff positions
* convenience function to calculate diffracted intensities of thin films to
  compare various Bragg peaks (coplanar diffraction geoemetry)
* simplify WyckoffBase of Alloy, by avoiding double entries
* CIF parser now is able to fully parse files without symmetry operations
* CIF parser now distinguishes multiple "_data" entries
* improvement of the scanning XRD dataset parsers for ID01 (FastScan)
* PEP8 improvements
* speed optimization in EDF parser
* add getheader_element to SPECScan
* try to parse oxidation state of elements from a CIF file, and ignore '.' and
  '?' values for Debye-Waller factors and occupation
* numpy 1.14 related fixes (mostly in file parsers)
* fix bugs in spacegroups whos Wyckoff position contains a multiplication
* make U/UB matrix compatible with the definition in SPEC
* remove deprecated Lattice/LatticeBase code
* update XRR example

v1.4.2, 2017-11-28 "The Praha edition"

* introduce convenience function HKL to convert q-vectors to HKL of materials
* update outdated information and fix typos in README